Remove temporary hack from css which fixes overflowing text in alerts
Fix is merged into patternfly code.
https://github.com/patternfly/patternfly/issues/491

Fixes #5903 
Closes #10953

--- a/src/base1/cockpit.css
+++ b/src/base1/cockpit.css
@@ -280,13 +280,10 @@ a {
 
 /* Alert fixups */
 
-/* HACK: word-wrap workaround for long alerts https://github.com/patternfly/patternfly/issues/491 */
-
 .modal-content .alert {
     text-align: left;
     padding-top: 5px;
     padding-bottom: 5px;
-    word-wrap: break-word;
 }
 
 .modal-content .alert .fa {
